WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
272551
[iOS] REGRESSIO2N (
277078@main
): 61 mediastream layout tests are constantly failing.
https://bugs.webkit.org/show_bug.cgi?id=272551
Summary
[iOS] REGRESSIO2N (277078@main): 61 mediastream layout tests are constantly f...
Ryosuke Niwa
Reported
2024-04-11 14:03:58 PDT
The following mediastream layout tests are constantly failing: fast/mediastream/MediaDevices-addEventListener.html fast/mediastream/MediaDevices-getUserMedia.html fast/mediastream/MediaStream-MediaElement-setObject-null.html fast/mediastream/MediaStream-add-remove-null-undefined-tracks.html fast/mediastream/MediaStream-add-remove-tracks.html fast/mediastream/MediaStream-add-tracks-to-inactive-stream.html fast/mediastream/MediaStream-clone.html fast/mediastream/MediaStream-construct-with-ended-tracks.html fast/mediastream/MediaStream-getTracks.html fast/mediastream/MediaStream-removeTrack-while-playing.html fast/mediastream/MediaStream-video-element-change-audio-route.html fast/mediastream/MediaStream-video-element-remove-track.html fast/mediastream/MediaStream-video-element-track-stop.html fast/mediastream/MediaStream-video-element.html fast/mediastream/MediaStreamConstructor.html fast/mediastream/MediaStreamTrack-getCapabilities.html fast/mediastream/MediaStreamTrack-getSettings.html fast/mediastream/MediaStreamTrack-kind.html fast/mediastream/MediaStreamTrackEvent-constructor.html fast/mediastream/RTCPeerConnection-icecandidate-event.html fast/mediastream/anonymize-device-name.html fast/mediastream/applyConstraints-parallel.html fast/mediastream/camera-invalid-device.html fast/mediastream/change-tracks-media-stream-being-played.html fast/mediastream/cloned-video-stream-aspect-ratio.html fast/mediastream/default-camera-test.html fast/mediastream/delayed-permission-allowed.html fast/mediastream/enumerate-devices-change-event.html fast/mediastream/enumerate-speaker.html fast/mediastream/get-user-media-device-id.html fast/mediastream/get-user-media-on-loadedmetadata.html fast/mediastream/getUserMedia-default.html fast/mediastream/getUserMedia-deny-persistency-reload.html fast/mediastream/getUserMedia-deny-persistency2.html fast/mediastream/getUserMedia-deny-persistency4.html fast/mediastream/getUserMedia-deny-persistency5.html fast/mediastream/getUserMedia-grant-persistency-reload.html fast/mediastream/getUserMedia-grant-persistency.html fast/mediastream/getUserMedia-grant-persistency2.html fast/mediastream/granted-denied-request-management2.html fast/mediastream/image-capture-get-photo-capabilities.html fast/mediastream/media-device-info.html fast/mediastream/media-devices-enumerate-devices.html fast/mediastream/media-stream-track-interrupted.html fast/mediastream/media-stream-track-muted.html fast/mediastream/media-stream-track-source-failure.html fast/mediastream/media-stream-video-track-interrupted-from-audio.html fast/mediastream/media-stream-video-track-interrupted.html fast/mediastream/media-stream-wrapper-collected.html fast/mediastream/mediastreamtrack-audiovideo-mutepage.html fast/mediastream/mediastreamtrack-video-backgroundBlur.html fast/mediastream/mediastreamtrack-video-frameRate-clone-decreasing.html fast/mediastream/mediastreamtrack-video-frameRate-decreasing.html fast/mediastream/mediastreamtrack-video-frameRate-increasing.html fast/mediastream/mediastreamtrack-video-resize-event.html fast/mediastream/mock-media-source.html fast/mediastream/now-playing-and-mediastream.html fast/mediastream/stop-clone-when-muted.html fast/mediastream/stream-switch.html fast/mediastream/success.html fast/mediastream/video-mediastream-restricted-invisible-autoplay-not-allowed.html <
rdar://126162943
>
Attachments
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2024-04-11 14:10:21 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/27162
EWS
Comment 2
2024-04-11 22:08:39 PDT
Committed
277415@main
(2736644fa8bb): <
https://commits.webkit.org/277415@main
> Reviewed commits have been landed. Closing PR #27162 and removing active labels.
youenn fablet
Comment 3
2024-05-27 02:26:35 PDT
***
Bug 274599
has been marked as a duplicate of this bug. ***
EWS
Comment 4
2024-05-31 09:42:41 PDT
Committed
272448.1055@safari-7618-branch
(a94710961220): <
https://commits.webkit.org/272448.1055@safari-7618-branch
> Reviewed commits have been landed. Closing PR #1310 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug