[iOS] REGRESSION (277078@main): 61 mediastream layout tests are constantly failing. https://bugs.webkit.org/show_bug.cgi?id=272551 <rdar://126162943>

Reviewed by Per Arne Vollan and Chris Dumez.

Guard com.apple.developer.web-browser-engine.rendering entitlement check behind
mediaCapabilityGrantsEnabled since it's completely disabled in iOS simulators.

* Source/WebCore/platform/mock/MockRealtimeVideoSource.cpp:
(WebCore::MockRealtimeVideoSource::startProducingData):
* Source/WebKit/UIProcess/Cocoa/UserMediaCaptureManagerProxy.cpp:
(WebKit::UserMediaCaptureManagerProxy::startProducingData):

Canonical link: https://commits.webkit.org/277415@main